fix: spacing and stuff

--- a/index.css
+++ b/index.css
@@ -194,25 +194,26 @@
 }
 
 .merch {
-    height: 100%;
-    position: relative;
-    z-index: 1;
-}
-.merch .wrapper {
-	width: 100%;
-    max-width: 600px;
-    height: auto;
+    height: fit-content;
+    max-width: 85%;
     background: var(--bg);
     margin: auto;
-    padding: 3rem 4rem;
+    padding: 1rem 1rem;
     border-radius: 0.5rem;
     border: var(--aside-border);
-	box-shadow: var(--aside-shadow-lblue);
+    box-shadow: var(--aside-shadow-lblue);
+    position: relative;
+    display: flex;
+    flex-direction: row;
+
+    align-items: center;
+    justify-content: center;
 }
-.merch section {
-    padding: 4rem 0;
+
+.merch div:has(img) {
 }
-.merch-content {
+
+.merch img {
     width: 100%;
 }
 
@@ -269,5 +270,14 @@
     }
     #statement .wrapper {
         padding: 3rem 0;
+    }
+
+    .merch {
+	max-width: 100%;
+	flex-direction: column-reverse;
+    }
+
+    .merch div:has(img) {
+	width: 65%;
     }
 }
